--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     proxyTargetClass: true
   application:
     name: api-gateway
+  redis:
+    host: localhost
+    password: 123456
+    port: 6379
 
 # Define the port where the API gateway server would be running
 server:
@@ -25,6 +29,7 @@ zuul:
       path: /uaa/**
       stripPrefix: false
   add-proxy-headers: true
+ 
 
 security:
   # Disable Spring Boot basic authentication
