--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "2"
 services:
   service-registry:
-    image: kakawait/service-registry
+    image: zoro/service-registry
     environment:
       SERVICE_HOST: registry
       SERVICE_PORT: 8761
 
   uaa-service:
-    image: kakawait/uaa-service
+    image: zoro/uaa-service
     environment:
       SERVICE_PORT: 8769
       REGISTRY_URL: http://service-registry:8761/eureka
@@ -15,7 +15,7 @@ services:
       - service-registry:service-registry
 
   api-gateway:
-    image: kakawait/api-gateway
+    image: zoro/api-gateway
     environment:
       SERVICE_PORT: 8765
       REGISTRY_URL: http://service-registry:8761/eureka
@@ -26,7 +26,7 @@ services:
       - uaa-service:uaa-service
 
   dummy-service:
-    image: kakawait/dummy-service
+    image: zoro/dummy-service
     environment:
       SERVICE_PORT: 8870
       REGISTRY_URL: http://service-registry:8761/eureka
